fleet-gitops/40-gitops/argocd-manifests/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    cert-manager.io/duration: "720h"
    cert-manager.io/renew-before: "168h"
spec:
  gatewayClassName: ${GATEWAY_CLASS}
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: ${ARGOCD_FQDN}
      tls:
        mode: Terminate
        certificateRefs:
          - name: ${ARGOCD_TLS_SECRET}
      allowedRoutes:
        namespaces:
          from: Same
